--- a/html/dmt_plugin.html
+++ b/html/dmt_plugin.html
@@ -49,7 +49,7 @@ function <?cs var:config.plugin_pre ?>OnDownFile(type)
 		success: function(js){
 			if(dmtFirstDealAjaxResponse(js))
 				return;
-			if(typeof js.downurl != undefined) {
+			if(typeof js.downurl != 'undefined') {
 				saveAs(js.downurl, js.filename);
 			}
 			else {
@@ -81,7 +81,7 @@ function <?cs var:config.plugin_pre ?>OnMakeFile()
 		success: function(js){
 			if(dmtFirstDealAjaxResponse(js))
 				return;
-			if(typeof js.ret != undefined && js.ret == 0) {
+			if(typeof js.ret != 'undefined' && js.ret == 0) {
 				alertMsg.correct('成功生成插件文件, 注意需要将文件同步到其它机器');
 			}
 			else {
