--- a/html/dmt_plugin.html
+++ b/html/dmt_plugin.html
@@ -1,6 +1,6 @@
 <script src="<?cs var:config.docpath?>js/FileSaver.js" type="text/javascript"></script>
 <script language="javascript" type="text/javascript">
-var <?cs var:config.plugin_pre ?>_plugin_list = $.parseJSON('<?cs var:config.plugin_list ?>');
+var <?cs var:config.plugin_pre ?>_plugin_list = null;
 var <?cs var:config.plugin_pre ?>_sel_plugin = null;
 
 <?cs if:config.plugin_pre == "dpopen" ?>
@@ -26,6 +26,28 @@ function <?cs var:config.plugin_pre ?>SetSelplugin(selIndex)
 	$(pid).css('background-color', '#ddf79a');
 }
 
+function <?cs var:config.plugin_pre ?>OnDownBin()
+{
+    if(<?cs var:config.plugin_pre ?>_sel_plugin == null)
+    {
+        alertMsg.info("请右键单击插件通过弹出菜单下载");
+        return;
+    }
+
+	if(typeof <?cs var:config.plugin_pre ?>_sel_plugin.local_plugin_index == 'undefined') {
+		alertMsg.warn("请先安装插件");
+		return;
+	}
+	var local = g_LocalOpenPluginList.list[<?cs var:config.plugin_pre ?>_sel_plugin.local_plugin_index];
+    var requrl = "<?cs var:config.xrkmonitor_url ?>/monitor/download/plugin/public/";
+
+	requrl += <?cs var:config.plugin_pre ?>_sel_plugin.plugin_name+ "/";
+	var filename = <?cs var:config.plugin_pre ?>_sel_plugin.plugin_name+ "_";
+	filename += local.ver + ".so";
+	requrl += filename;
+	saveAs(requrl, filename);
+}
+
 function <?cs var:config.plugin_pre ?>OnDownSrc()
 {
     if(<?cs var:config.plugin_pre ?>_sel_plugin == null)
@@ -34,10 +56,16 @@ function <?cs var:config.plugin_pre ?>OnDownSrc()
         return;
     }
 
+	if(typeof <?cs var:config.plugin_pre ?>_sel_plugin.local_plugin_index == 'undefined') {
+		alertMsg.warn("请先安装插件");
+		return;
+	}
+	var local = g_LocalOpenPluginList.list[<?cs var:config.plugin_pre ?>_sel_plugin.local_plugin_index];
+
     var requrl = "<?cs var:config.xrkmonitor_url ?>/monitor/download/plugin/public/";
 	requrl += <?cs var:config.plugin_pre ?>_sel_plugin.plugin_name+ "/";
 	var filename = <?cs var:config.plugin_pre ?>_sel_plugin.plugin_name+ "_";
-	filename += <?cs var:config.plugin_pre ?>_sel_plugin.ver + ".zip";
+	filename += local.ver + ".zip";
 	requrl += filename;
 	saveAs(requrl, filename);
 }
@@ -50,6 +78,10 @@ function <?cs var:config.plugin_pre ?>OnDownConf()
         return;
     }
 
+	if(typeof <?cs var:config.plugin_pre ?>_sel_plugin.local_plugin_index == 'undefined') {
+		alertMsg.warn("请先安装插件");
+		return;
+	}
     var requrl = "<?cs var:config.cgipath?>mt_slog?action=down_plugin_conf";
     requrl += "&plugin_id=" + <?cs var:config.plugin_pre ?>_sel_plugin.plugin_id; 
     $.ajax({
@@ -254,6 +286,9 @@ function <?cs var:config.plugin_pre ?>SetpluginList()
 			bindings: { 
 				downconf:function(t, m) { 
 					return <?cs var:config.plugin_pre ?>OnDownConf();
+				},
+				downbin:function(t, m) { 
+					return <?cs var:config.plugin_pre ?>OnDownBin();
 				},
 				downall:function(t, m) { 
 					return <?cs var:config.plugin_pre ?>OnDownSrc();
