--- a/html/dwz_foot.html
+++ b/html/dwz_foot.html
@@ -12,7 +12,7 @@
 		<br />
 		<br />
 		<a target='_blank' href='https://jq.qq.com/?_wv=1027&k=5WgNeJs'>
-			<img src='http://xrkmonitor.com/monitor/main/img/new_qq_group.png'>
+			<img width='300' height='240' src='http://xrkmonitor.com/monitor/main/img/new_qq_group.png'>
 		</a>
 		<br />
 		<br />
