--- a/html/dwz_js.html
+++ b/html/dwz_js.html
@@ -44,7 +44,7 @@
 <script src="<?cs var:config.docpath?>js/dwz.regional.zh.js" type="text/javascript"></script>
 
 <!-- rock add -->
-<script src="<?cs var:config.docpath?>js/dmt.comm.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/dmt.comm.20200326.js" type="text/javascript"></script>
 <script src="<?cs var:config.docpath?>js/echarts.min.js"></script>
 <script src="<?cs var:config.docpath?>js/jquery.md5.js" type="text/javascript"></script>
 <script src="<?cs var:config.docpath?>js/jquery.highlight-3.js?v=0.3.5"></script>
